# tutor-contrib-codejail

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pylintrc  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: add_issues_prs_to_apollo_project.yml  ci.yml  python-publish.yml  test.yml
changelog.d/: 20260508_120249_moises.gonzalez.md
docs/decisions/: 0001-purpose-of-this-repo.rst
requirements/: base.in  dev.in  dev.txt
tutorcodejail/: __about__.py  __init__.py  plugin.py
tutorcodejail/patches/: cms-env  common-env-features  k8s-deployments  k8s-jobs  k8s-services  kustomization-configmapgenerator  kustomization-resources  lms-env  local-docker-compose-dev-services  local-docker-compose-jobs-services  local-docker-compose-services  openedx-lms-common-settings
tutorcodejail/templates/codejail/apps/codejail/: tutor.py
tutorcodejail/templates/codejail/apps/codejail-service-v2/: tutor.py
tutorcodejail/templates/codejail/apps/config/: tutor.py
tutorcodejail/templates/codejail/apps/profiles/: docker-edx-sandbox  openedx-codejail-service.profile
tutorcodejail/templates/codejail/apps/settings/: tutor.py
tutorcodejail/templates/codejail/k8s/: hpa.yml
tutorcodejail/templates/codejail/tasks/codejail-apparmor/: init
tutorcodejail/templates/codejail/tasks/codejail_apparmor/: init
tutorcodejail/tests/: __init__.py  test_plugin.py
