[project]
name = "tutor-contrib-codejail"
version = "22.0.0"
description = "Codejail plugin for Tutor"
readme = "README.md"
license-files = ["LICENSE"] 
authors = [
    { name = "eduNEXT" }
]
requires-python = ">=3.10"
dependencies = [
    "tutor~=22.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Code" = "https://github.com/edunext/tutor-contrib-codejail"
"Issue tracker" = "https://github.com/edunext/tutor-contrib-codejail/issues"
"Homepage" = "https://github.com/github/tutor-contrib-codejail"

[project.entry-points."tutor.plugin.v1"]
codejail = "tutorcodejail.plugin"

[tool.uv.build-backend]
module-root = "."
module-name = "tutorcodejail"

[tool.uv.sources]
tutor = {
    git = "https://github.com/overhangio/tutor",
    rev = "59264ca9f9c6a8e67622ae72080684ffc6ec7e2a", # Verawood
}
tutor-mfe = {
    git = "https://github.com/overhangio/tutor-mfe",
    rev = "72370dd4ace29e1a7a646da57eabc8e098ecee67", # Verawood
}


[build-system]
requires = ["uv_build>=0.9.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff",
    "scriv>=1.8.0",
    "ty>=0.0.34",
	"tutor-mfe",
]

[tool.ruff]
line-length = 120
indent-width = 4
lint.select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "UP",
]
extend-exclude = [
    "tutorcodejail/templates/**"
]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = "Added, Changed, Fixed, Removed"
format = "md"
md_header_level = 2
new_fragment_template = "file: changelog.d/scriv/new_fragment.md.j2"
entry_title_template = "file: changelog.d/scriv/entry_title.md.j2"

[tool.ty.src]
exclude = ["tutorcodejail/templates"]
